fix BasePreProcess command can not run on mac bug..[need test on win]